sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11: error: not found: value combSort11
		combSort11();
                ^AlgCombSort11:10: error: type mismatch;
 found   : Unit
 required: Boolean
	if (ecart = 10)
                  ^AlgCombSort11:12: error: type mismatch;
 found   : Unit
 required: Boolean
	else if (ecart = 9)
                       ^